# lightning-lm

./: .gitignore  CLAUDE.md  README.md  done_work.md  lidar_ppl.md  refactor_design.md  resume.txt  usage.md
build_test/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  rosidl_adapter__arguments__lightning.json  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json
build_test/ament_cmake_core/: lightningConfig.cmake  package.cmake
build_test/ament_cmake_core/stamps/: ament_cmake_export_dependencies-extras.cmake.stamp  ament_cmake_export_include_directories-extras.cmake.stamp  rosidl_cmake-extras.cmake.stamp
build_test/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
build_test/ament_cmake_export_libraries/: ament_cmake_export_libraries-extras.cmake
build_test/ament_cmake_export_targets/: ament_cmake_export_targets-extras.cmake
build_test/ament_cmake_index/share/ament_index/resource_index/package_run_dependencies/: lightning
build_test/ament_cmake_index/share/ament_index/resource_index/rosidl_interfaces/: lightning
build_test/ament_cmake_python/lightning/: setup.py
build_test/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
build_test/lightning__py/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/rosidl_adapter/: lightning.idls
build_test/rosidl_adapter/lightning/srv/: LocCmd.idl  SaveMap.idl
build_test/rosidl_cmake/: rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
build_test/rosidl_cmake/srv/: LocCmd_Request.msg  LocCmd_Response.msg  SaveMap_Request.msg  SaveMap_Response.msg
build_test/rosidl_generator_c/lightning/msg/: rosidl_generator_c__visibility_control.h
build_test/rosidl_generator_cpp/lightning/msg/: rosidl_generator_cpp__visibility_control.hpp
build_test/rosidl_typesupport_fastrtps_c/lightning/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h
build_test/rosidl_typesupport_fastrtps_cpp/lightning/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h
build_test/rosidl_typesupport_introspection_c/lightning/msg/: rosidl_typesupport_introspection_c__visibility_control.h
build_test/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/src/app/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/src/core/miao/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/src/core/miao/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/src/core/miao/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_unit/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_unit/Testing/Temporary/: CTestCostData.txt
build_unit/unit/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_coordinate_utils
src/: CMakeLists.txt
src/adapter/common/: coordinate_utils.cc  coordinate_utils.h
src/adapter/ros2/: ros2_converter.cc  ros2_converter.h
src/app/: CMakeLists.txt  run_loc_online.cc  run_slam_offline.cc  run_slam_online.cc
src/common/: options.cc  options.h
src/core/engine/: loc_engine.cc  loc_engine.h  slam_engine.cc  slam_engine.h
src/core/gnss/: gnss_rtk_handler.cc  gnss_rtk_handler.h
src/core/lidar/: lidar_pipeline.cc  lidar_pipeline.h  local_map.cc  local_map.h
src/core/lio/: imu_processing.hpp  laser_mapping.cc  laser_mapping.h
src/core/localization/: localization.cpp  localization.h  localization_result.cc  localization_result.h
src/core/localization/pose_graph/: pgo.cc  pgo.h  pgo_impl.cc  pgo_impl.h
src/core/miao/core/types/: edge_position_prior.h
src/core/system/: loc_system.cc  loc_system.h  slam.cc  slam.h
src/core/types/: platform_types.h
tests/: CMakeLists.txt
tests/offline/: CMakeLists.txt  test_core_no_ros.cc
tests/regression/: baseline_traj.tum  capture_baseline.sh  run_regression.sh
tests/snapshot/: capture_golden.cc  golden_io.h  verify_snapshot.cc
tests/unit/: CMakeLists.txt  coordinate_utils_test.cc  gnss_rtk_handler_test.cc
