# tests/offline/CMakeLists.txt
#
# Phase 5 offline engine tests are compiled as part of the main colcon build
# (see src/app/CMakeLists.txt — test_core_no_ros target).
# This file is a placeholder so add_subdirectory() in tests/CMakeLists.txt
# does not fail when building the tests/ sub-project in isolation.
